@@ -1,3 +1,12 @@
+2009-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/magick.c (InitializeMagick): Improve the quality of the
+	seed passed to srand().
+
+	* coders/png.c (ReadOnePNGImage): Ensure that opacity channel is
+	properly initialized.  Resolves SourceForge issue 2831240
+	"Possible alpha channel issue with PNG w/palette and tRNS".
+
 2009-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/meta.c (ReadMETAImage): Fix memory leak of profile blob.
